<resources>
    <string name="app_name">MyAttendenceManagementSystem</string>
    <string name="Login_heading">Admin Login</string>
    <string name="Admin_login">Admin Login</string>
    <string name="Teacher_login">Teacher Login</string>
    <string name="Prompt_Email">Username</string>
    <string name="Prompt_passwrd">Password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="Login">Login</string>
    <string name="Baack_To_Dash">Back</string>
    <string name="Cource">Course:</string>
    <string name="Semester">Semester:</string>
    <string name="Reg.No.">Reg.No</string>
    <string name="view_attendence">View Attendence</string>
    <string name="error_text">Error</string>
    <string name="attendence_details">Attendence Details</string>
    <string name="Teacher_name">Teacher Name</string>
    <string name="Email">Email</string>
    <string name="contact_No">Contact No.</string>
    <string name="Unique_ID">UserID</string>
    <string name="Add_teacher">Add Teacher</string>
    <string name="Add">Add</string>
    <string name="Admin_Portal">Admin Portal</string>
    <string name="AMS">Attendence Management</string>
    <string name="markAttendence">Mark Attendence</string>
    <string name="studentName">Student Name</string>
    <string name="AddStudent">Add Student</string>
    <string name="DeleteTeacher">Delete Teacher</string>
    <string name="deleteStudent">Delete Student</string>
    <string name="upload">Upload Databse</string>
    <string name="Teacher_dash">Teacher Dash</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset Password</string>
    <string name="Update">Update Database</string>
    <string name="register">Register</string>
    <string name="modify_Student">Modify Student</string>
    <string name="modify_Teacher">Modify Teacher</string>
    <string name="Update_Data">Update</string>
    <string name="empty_list_text">List Is Empty</string>
    <string name="edit_students">Edit Students</string>
    <string name="edit_Teacher">Edit Teachers</string>
    <string name="Sem">Sem:</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_accnt">Edit Account</string>
    <string name="Teacher_id">Teacher Id</string>
    <string name="addSubject">Add Subject</string>
    <string name="sub_name">Subject Name</string>
    <string name="sub_code">Subject Code</string>
    <string name="for_sem">For Semester</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="subject">Subject:</string>
    <string name="student_list">Students List</string>
    <string name="teacher_list">Teachers List</string>
    <string name="view_admin">View Admin</string>
    <string name="edit_admin">Edit Admin</string>
    <string name="add_subject">Add Subject</string>
    <string name="subject_list">Subjects List</string>
    <string name="attendence_empty">Attendence Sheet is Empty</string>
    <string name="present">P</string>
    <string name="absent">A</string>
    <string name="submit">Submit</string>
    <string name="Reset">Reset</string>
    <string name="date">Select Date:</string>
    <string name="signout">Logout</string>
    <string name="edit_account">Edit Account</string>
    <string name="ViewAttendenceBy">Get</string>
    <string name="action_settings">Settings</string>
    <string name="enterEmail">Enter Registered Email</string>
    <string name="GetPassword">Get Password</string>
    <string name="ForgotPassword">Forgot Password? click here</string>
    <string name="error_field_required">This field is required</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="invalidEmail">Invalid Email</string>

    <string-array name="cource_names">
        <item>BBA</item>
        <item>BTech(CS)</item>
        <item>BTech(ECE)</item>
        <item>BTech(ME)</item>
        <item>BTech(Civil)</item>
        <item>BCA</item>
        <item>B.Pharm</item>
        <item>MBA</item>
        <item>MCA</item>
        <item>BSc Mic.</item>
        <item>Bsc Maths</item>
        <item>BSc Bio.</item>
        <item>BSc Mlt.</item>
    </string-array>

    <string-array name="Semester_names">
        <item>Sem_I</item>
        <item>Sem_II</item>
        <item>Sem_III</item>
        <item>Sem_IV</item>
        <item>Sem_V</item>
        <item>Sem_VI</item>
        <item>Sem_VII</item>
        <item>Sem_VIII</item>
    </string-array>

    <string-array name="ViewAttendencefor">
        <item>Student Wise Attendance Details</item>
        <item>Class Wise Attandance Details</item>
    </string-array>

</resources>
