<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context="com.example.aquib.myattendencemanagementsystem.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <AutoCompleteTextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/Teacher_Username"
            android:hint="@string/Teacher_id"
            android:imeOptions="actionNext"
            android:textColor="@color/White"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="false"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/teacher_password"
            android:hint="@string/Prompt_passwrd"
            android:inputType="textPassword"
            android:textColor="@color/White"
            android:maxLines="1"
            android:textIsSelectable="false"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotActivity"
        android:onClick="forgotpassword"
        android:textSize="15sp"
        android:visibility="visible"
        android:text="@string/ForgotPassword"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/button_techer_login"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@color/Red"
        android:text="@string/Login"
        style="?android:textAppearanceMedium"
        android:layout_gravity="center"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:onClick="TeacherLogin"
        android:layout_marginTop="8dp"/>


    <Button
        android:id="@+id/registration_button"
        style="?android:textAppearanceMedium"
        android:layout_width="340dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/green"
        android:text="@string/register"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:onClick="registerUser"/>

</LinearLayout>
