<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context="com.example.aquib.myattendencemanagementsystem.Register_User">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/user"
        android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/UpdateTeacherName"
            android:layout_width="340dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/Teacher_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:textColor="@color/White"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/UpdateTeacher_email"
            android:layout_width="340sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:textColor="@color/White"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/UPDATEUniqueID"
            android:layout_width="340dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/Unique_ID"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:textColor="@color/White"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/Update_t_passwrd"
            android:layout_width="340dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/Prompt_passwrd"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:textColor="@color/White"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/UpdateTeacherButton"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Update_Data"
        android:textColor="@color/White"
        android:background="@color/Rpurple"
        android:layout_marginTop="10dp" />
    <Button
        android:id="@+id/DeleteTeacherButton"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:background="@color/Lblue"
        android:layout_marginTop="5dp" />
</LinearLayout>
