<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context="com.example.aquib.myattendencemanagementsystem.Register_User">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/TecherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Teacher_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:textColor="@color/White"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/Teacher_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:textColor="@color/White"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
                    android:id="@+id/UniqueID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Unique_ID"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textIsSelectable="true"
                    android:textColor="@color/White"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Prompt_passwrd"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:textColor="@color/White"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/Add_techer_button"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/White"
        android:background="@color/Rpurple"
        android:layout_marginTop="10dp" />
</LinearLayout>
