<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.aquib.myattendencemanagementsystem.Attendence_List">

    <ListView
        android:id="@+id/attendenceList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@color/dividerColor"
        android:dividerHeight="1.5dp"
        android:listSelector="@drawable/gradient"
        android:padding="10dp">

    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="150dp"
            android:id="@+id/Submit_attendence"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/submit"
            android:background="@color/orange"
            android:layout_marginBottom="5dp"
            style="?android:textAppearanceMedium"
            android:onClick="v"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/Reset"
            android:background="@color/red"
            android:layout_marginBottom="5dp"
            android:onClick="reset"
            style="?android:textAppearanceMedium"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendence_empty"
        android:id="@+id/emptyAttendenceSheet"
        />

</RelativeLayout>
